src/quick/items/qquickrendercontrol.cpp
@@ -247,7 +247,7 @@ void QQuickRenderControl::polishItems()
         return;
 
     QQuickWindowPrivate *cd = QQuickWindowPrivate::get(d->window);
-    cd->flushDelayedTouchEvent();
+    cd->flushFrameSynchronousEvents();
     if (!d->window)
         return;
     cd->polishItems();
